# cognitive-os-api

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  evidence_question.md  reproduction_report.md
.github/workflows/: ci.yml
cognitive_os/: __init__.py  analyzer.py  api.py  baselines.py  compiler.py  conformance.py  evidence.py  gate.py  judgment.py  profiles.py  protocol.py  provider.py  runtime.py  schemas.py  trace.py  version.py
cognitive_os/benchmarks/: __init__.py
cognitive_os/benchmarks/cognitiveos_v0/: __init__.py  adversarial_expected_gates.json  adversarial_scenarios.json  challenge_expected_gates.json  challenge_scenarios.json  expected_gates.json  external_reference_fixture.csv  report.py  run_adversarial.py  run_baselines.py  run_benchmark.py  run_challenge_pack.py  run_conformance.py  run_external_reference_pack.py  scenarios.json
cognitive_os/demo/: investor_email_demo.py  profiles.json  scenarios.json
cognitive_os/static/ui/: app.js  index.html  (+1 more)
docs/: BASELINE_METHOD.md  CHALLENGE_FAILURE_ANALYSIS.md  DEMO_SCRIPT_3_MIN.md  DEMO_SCRIPT_60_SEC.md  EVIDENCE_BOUNDARY.md  EXTERNAL_REPRODUCTION.md  EXTERNAL_RESULT_REPORTING.md  PROTOCOL.md  REFERENCE_ARCHITECTURE.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  REPRODUCTION.md  SELF_AUDIT_REPRODUCTION_REPORT.md  TRACE_PRIVACY.md
tests/: test_api.py  test_benchmark.py  test_compiler.py  test_gate.py  test_judgment.py  test_protocol.py  test_provider.py  test_trace.py
(+2 files in other folders)
