[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-os-api"
version = "0.1.5"
description = "Presentation evidence viewer for traceable LLM decision governance."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "fastapi>=0.103,<0.104",
  "uvicorn>=0.22,<0.23",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.24,<0.25",
]

[tool.setuptools.packages.find]
include = ["cognitive_os*"]
